--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -24,17 +24,13 @@
 <body>
 
 <table class="donate">
-</tr>
+
 <tr>
-<td colspan="3">
-</td>
-</tr>
-<tr>
-<td colspan="3">LIVE FIAT to BCH conversions of <b>161 currencies</b>!
+<td colspan="3">Place a PayButton on your site with just a snippet of code, and <b>START ACCEPTING</b> Bitcoin Cash! COMING SOON!
 <br />
 <br />ALL code (including this website) hosted on github!
 <br />
-<br />Place a PayButton on your site with just a snippet of code, and <b>START ACCEPTING</b> Bitcoin Cash! COMING SOON!
+<br />LIVE FIAT to BCH conversions of <b>161 currencies</b>!
 <br />
 <br /><b><a href="https://jsfiddle.net/L2a5yukt/">Donation Page Sandbox (beta)</a></b>
 </td>
