--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -28,7 +28,7 @@
 <tr>
 <td colspan="3">Place a PayButton on your site with just a snippet of code, and <b>START ACCEPTING</b> Bitcoin Cash! COMING SOON!
 <br />
-<br />ALL code (including this website) hosted on github!
+<br />ALL PayButton code (including this website) hosted on github!
 <br />
 <br />LIVE FIAT to BCH conversions of <b>161 currencies</b>!
 <br />
