--- a/modal-test/index.html
+++ b/modal-test/index.html
@@ -26,7 +26,7 @@
 <table class="donate">
 
 <tr>
-<td colspan="3">Place a PayButton on your site with just a snippet of code, and <b>START ACCEPTING</b> Bitcoin Cash! COMING SOON!
+<td colspan="3">Place a PayButton on your site with <b>just a snippet of code</b>, and START ACCEPTING Bitcoin Cash! COMING SOON!
 <br />
 <br />ALL PayButton code (including this website) hosted on github!
 <br />
