--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
 <button
 class="pay-button spice"
 button-text="Support the Spice"
-button-text-2="Donate $1"
-amount="1"
+button-text-2="Donate A Penny"
+amount="0.01"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-msg="Thanks for supporting Spice!"
