--- a/test.html
+++ b/test.html
@@ -1,4 +1,29 @@
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head>
+
+<meta charset="UTF-8" />
+<title>PayButton - Coming Soon to BCH</title>
+
 <script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
+  
+    <!-- icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
+    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="mask-icon" href="../img/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../img/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="../img/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+</head>
+
+<body>
+
+
 <button
 class="pay-button spice"
 button-text="Support the Spice"
@@ -9,3 +34,8 @@ address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-msg="Thanks for supporting Spice!"
 >
 </button>
+
+  
+</body>
+
+</html>
