--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 <head>
 
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PayButton - Coming Soon to BCH</title>
 
 <script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
