--- a/test.html
+++ b/test.html
@@ -10,14 +10,14 @@
 <script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
   
     <!-- icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./image/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./image/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./image/icons/favicon-16x16.png">
-    <link rel="manifest" href="./image/icons/site.webmanifest">
-    <link rel="mask-icon" href="./image/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="./image/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon-16x16.png">
+    <link rel="manifest" href="./images/icons/site.webmanifest">
+    <link rel="mask-icon" href="./images/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./images/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="./image/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="./images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
 </head>
