--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PayButton - Coming Soon to BCH</title>
 
-<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
+<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.js"></script>
   
     <!-- icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
@@ -27,12 +27,87 @@
 
 <button
 class="pay-button spice"
-button-text="Support the Spice"
-button-text-2="Donate A Penny"
+button-text="Donate a Penny"
+button-text-2=""
 amount="0.01"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-msg="Thanks for supporting Spice!"
+>
+</button>
+  <br /> <br />
+<button
+class="pay-button"
+button-text=""
+button-text-2=""
+amount="1"
+amount-type="usd"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-msg=""
+paywall-field=""
+success-callback=""
+>
+</button>
+<br />
+<button
+class="pay-button rev"
+button-text=""
+button-text-2=""
+amount="5"
+amount-type="usd"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-field=""
+success-msg="Thank you for donating!"
+>
+</button>
+<br />
+<button
+class="pay-button bare"
+button-text=""
+button-text-2=""
+amount="10000"
+amount-type="satoshi"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-field=""
+success-msg="Thank you for donating!"
+>
+</button>
+
+<br /><br />
+
+<button
+class="pay-button wa"
+button-text=""
+button-text-2="Donate $1"
+amount="1"
+amount-type="AUD"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-field=""
+success-msg="Thank you for donating!"
+>
+</button>
+<br />
+<button
+class="pay-button warev"
+button-text=""
+button-text-2="Donate 10,000 Sats"
+amount="10000"
+amount-type="satoshi"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-field=""
+success-msg="Thank you for donating!"
+>
+</button>
+<br />
+<button
+class="pay-button wabare"
+button-text=""
+button-text-2=""
+amount="0.4"
+amount-type="bch"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-field=""
+success-msg="Thank you for donating!"
 >
 </button>
 
