--- a/test.html
+++ b/test.html
@@ -32,14 +32,14 @@ button-text-2=""
 amount="0.01"
 amount-type="USD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-msg="Thanks for supporting Spice!"
+success-msg="Thanks for supporting PayButton!"
 >
 </button>
   <br /> <br />
 <button
 class="pay-button"
-button-text=""
-button-text-2=""
+button-text="Donate $1"
+button-text-2="Click to send BCH"
 amount="1"
 amount-type="usd"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
@@ -51,7 +51,7 @@ success-callback=""
 <br />
 <button
 class="pay-button rev"
-button-text=""
+button-text="Donate $5"
 button-text-2=""
 amount="5"
 amount-type="usd"
@@ -107,7 +107,7 @@ amount="0.4"
 amount-type="bch"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
-success-msg="Thank you for donating!"
+success-msg="Thanks for supporting PayButton"
 >
 </button>
 
