--- a/test.html
+++ b/test.html
@@ -77,8 +77,8 @@ success-msg="Thank you for donating!"
 
 <button
 class="pay-button wa"
-button-text=""
-button-text-2="Donate $1"
+button-text="Donate $1"
+button-text-2=""
 amount="1"
 amount-type="AUD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
@@ -89,8 +89,8 @@ success-msg="Thank you for donating!"
 <br />
 <button
 class="pay-button warev"
-button-text=""
-button-text-2="Donate 10,000 Sats"
+button-text="Donate 10,000 Sats"
+button-text-2=""
 amount="10000"
 amount-type="satoshi"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
