--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@ button-text-2="Click to send BCH"
 amount="1"
 amount-type="usd"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
-success-msg=""
+success-msg="Thanks for supporting PayButton!"
 paywall-field=""
 success-callback=""
 >
@@ -57,19 +57,19 @@ amount="5"
 amount-type="usd"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
-success-msg="Thank you for donating!"
+success-msg="Thanks for supporting PayButton!"
 >
 </button>
 <br />
 <button
 class="pay-button bare"
-button-text=""
+button-text="Any Amount"
 button-text-2=""
-amount="10000"
-amount-type="satoshi"
+amount=""
+amount-type=""
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
-success-msg="Thank you for donating!"
+success-msg="Thanks for supporting PayButton!"
 >
 </button>
 
@@ -83,7 +83,7 @@ amount="1"
 amount-type="AUD"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
-success-msg="Thank you for donating!"
+success-msg="Thanks for supporting PayButton!"
 >
 </button>
 <br />
@@ -95,7 +95,7 @@ amount="10000"
 amount-type="satoshi"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
-success-msg="Thank you for donating!"
+success-msg="Thanks for supporting PayButton!"
 >
 </button>
 <br />
@@ -107,7 +107,7 @@ amount="0.4"
 amount-type="bch"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
-success-msg="Thanks for supporting PayButton"
+success-msg="Thanks for supporting PayButton!"
 >
 </button>
 
