--- a/test.html
+++ b/test.html
@@ -89,10 +89,10 @@ success-msg="Thanks for supporting PayButton!"
 <br />
 <button
 class="pay-button warev"
-button-text="Donate 10,000 Sats"
+button-text=""
 button-text-2=""
-amount="10000"
-amount-type="satoshi"
+amount=""
+amount-type=""
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
 success-msg="Thanks for supporting PayButton!"
@@ -101,9 +101,9 @@ success-msg="Thanks for supporting PayButton!"
 <br />
 <button
 class="pay-button wabare"
-button-text=""
-button-text-2=""
-amount="0.4"
+button-text="error test"
+button-text-2="1 attribute"
+amount=""
 amount-type="bch"
 address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
 success-field=""
