--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PayButton - Coming Soon to BCH</title>
 
-<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
+<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.js"></script>
   
     <!-- icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
