--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -9,7 +9,7 @@
 
 <script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
   
-<style type="text/css" media="screen">
+<style type="text/css">
 
     .container {
         display: flex;
