--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -11,7 +11,7 @@
   
 <style type="text/css">
 
-    .container {
+    .c_container {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -31,7 +31,7 @@
 <body>
 
 
-<div class="container">
+<div class="c_container">
 <button
 class="pay-button rev"
 button-text="Send Collin A Tip!"
