--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -35,7 +35,7 @@
 <button
 class="pay-button rev"
 button-text="Send Collin A Tip!"
-button-text-2="Just The Tip!"
+button-text-2="Click to Send $1 in BCH!"
 amount="1"
 amount-type="usd"
 address="bitcoincash:bch_address_here"
