--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -38,7 +38,7 @@ button-text="Send Collin A Tip!"
 button-text-2="Click to Send $1 in BCH!"
 amount="1"
 amount-type="usd"
-address="bitcoincash:bch_address_here"
+address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
 success-msg="Thanks for sending Collin Your Tip!"
 >
 </button>
