--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -34,7 +34,7 @@
 <div class="c_container">
 <button
 class="pay-button rev"
-button-text="Send Collin A Tip!"
+button-text="Send Collin A BCH Tip!"
 button-text-2="Click to Send $1 in BCH!"
 amount="1"
 amount-type="usd"
