--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -45,8 +45,8 @@
 <div class="c_container">
 <button
 class="pay-button rev"
-button-text="Send Collin A BCH Tip!"
-button-text-2="Click to Send $1 in BCH!"
+button-text="Tip Collin $1/BCH!"
+button-text-2=""
 amount="1"
 amount-type="usd"
 address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
