--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -44,11 +44,31 @@
 
 <div class="c_container">
 <button
-class="pay-button rev"
+class="pay-button"
 button-text="Tip Collin $1/BCH!"
-button-text-2=""
+button-text-2="Click to Send BCH"
 amount="1"
 amount-type="usd"
+address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
+success-msg="Thanks for sending Collin Your Tip!"
+>
+</button>
+<button
+class="pay-button rev"
+button-text="Tip Collin $5/BCH!"
+button-text-2="Click to Send BCH"
+amount="5"
+amount-type="usd"
+address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
+success-msg="Thanks for sending Collin Your Tip!"
+>
+</button>
+<button
+class="pay-button rev"
+button-text="Any Amount!"
+button-text-2="Click to Send BCH"
+amount=""
+amount-type=""
 address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
 success-msg="Thanks for sending Collin Your Tip!"
 >
