--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -64,7 +64,7 @@ success-msg="Thanks for sending Collin Your Tip!"
 >
 </button>
 <button
-class="pay-button rev"
+class="pay-button bare"
 button-text="Any Amount!"
 button-text-2="Click to Send BCH"
 amount=""
