--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -47,20 +47,20 @@
 class="pay-button"
 button-text="Tip Collin $1/BCH!"
 button-text-2="Click to Send BCH"
-amount="1"
+amount="0.01"
 amount-type="usd"
 address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
-success-msg="Thanks for sending Collin Your Tip!"
+success-msg="Thanks for The Tip!"
 >
 </button>
 <button
 class="pay-button rev"
 button-text="Tip Collin $5/BCH!"
 button-text-2="Click to Send BCH"
-amount="5"
+amount="0.05"
 amount-type="usd"
 address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
-success-msg="Thanks for sending Collin Your Tip!"
+success-msg="Thanks for The Tip!"
 >
 </button>
 <button
@@ -70,7 +70,7 @@ button-text-2="Click to Send BCH"
 amount=""
 amount-type=""
 address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
-success-msg="Thanks for sending Collin Your Tip!"
+success-msg="Thanks for The Tip!"
 >
 </button>
 </div>
