--- a/test.html
+++ b/test.html
@@ -19,12 +19,29 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="./images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+  
+  <style type="text/css">
+
+    .c_container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        margin: 10% 0;
+        min-height: 200px;
+        background-color: #FFF;
+        align-items: center;
+    }
+
+</style>
 
 </head>
 
 <body>
 
-
+<div class="c_container">
 <button
 class="pay-button spice"
 button-text="Donate a Penny"
@@ -110,7 +127,7 @@ success-field=""
 success-msg="Thanks for supporting PayButton!"
 >
 </button>
-
+</div>
   
 </body>
 
