--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
         <div class="row h-100">
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
-              <h1 class="mb-3">PayButton is Almost Here!</h1>
-              <p class="mb-5">We're working hard to finish the development. Our target launch date is
+              <h1 class="mb-3">PayButton is now in Pre-Release!</h1>
+              <p class="mb-5">We're working hard to finish the development. Our target "Official" launch date is
                 <strong>Q1 2019</strong>! Stay tuned for more info!</p>
                  <p class="mb-5">paybutton.cash is proudly hosted on
                    <strong><a href="https://github.com/PayButton">github.io</a></strong>!</p>
+              <div class="input-twitter">
+                  <button onclick="window.location.href='https://www.reddit.com/r/btc/comments/an89xt/announcement_paybuttoncash_prerelease_launch_host/'" class="btn btn-secondary" type="button">Create PayButton</button>
+                </div>
               <div class="input-twitter">
                   <button onclick="window.location.href='https://twitter.com/thepaybutton'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
                 </div>
