--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                    <strong><a href="https://github.com/PayButton">github.io</a></strong>!</p>
               <div class="input-twitter">
                   <button onclick="window.location.href='https://www.reddit.com/r/btc/comments/an89xt/announcement_paybuttoncash_prerelease_launch_host/'" class="btn btn-secondary" type="button">Create A PayButton!</button>
-                </div><br /><br />
+                </div><br />
               <div class="input-twitter">
                   <button onclick="window.location.href='https://twitter.com/thepaybutton'" class="btn btn-secondary" type="button">Follow Us on Twitter!</button>
                 </div>
