--- a/test.html
+++ b/test.html
@@ -44,15 +44,30 @@
 <div class="c_container">
 <button
 class="pay-button spice"
-button-text="Donate a Penny"
-button-text-2=""
+button-text="Support The Spice"
+button-text-2="Donate $1"
 amount="0.01"
-amount-type="USD"
-address="bitcoincash:qz7uphl05rk2g2wf0k6g59l0gffpf2gzf53m3tzjlu"
-success-msg="Thanks for supporting PayButton!"
+amount-type="usd"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-msg="Thanks for supporting Spice!"
+paywall-field="paywall"
+success-callback=""
 >
 </button>
-  <br /> <br />
+<br />
+<button
+class="pay-button spice"
+button-text="Support The Spice"
+button-text-2="Donate $1"
+amount="0.01"
+amount-type="usd"
+address="bitcoincash:qpajl5cvn0fjsqs30xppuxs3uuhzfdj4ncrcfdukt3"
+success-msg="Thanks for supporting Spice!"
+paywall-field="paywall"
+success-callback=""
+>
+</button>
+<br /> <br />
 <button
 class="pay-button"
 button-text="Donate $1"
