--- a/test.html
+++ b/test.html
@@ -56,7 +56,7 @@ success-callback=""
 </button>
 <br />
 <button
-class="pay-button spice"
+class="pay-button spicerev"
 button-text="Support The Spice"
 button-text-2="Donate $1"
 amount="0.01"
