--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Collin's PayButton</title>
 
-<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
+<script src="/v0.1/js/paybutton.js"></script>
   
     <!-- icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://paybutton.cash/images/icons/apple-touch-icon.png">
@@ -73,9 +73,25 @@ address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
 success-msg="Thanks for The Tip!"
 >
 </button>
-</div>
 
+
+<div id="xxx"></div>
+
+</div>
   
+<script>
+  var config = {
+    style: '',
+    button_text: 'Send 15 BCH',
+    button_text_2: 'Click to Send BCH',
+    amount: 15.000,
+    amount_type: 'BCH',
+    address: 'bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k',
+    success_msg: 'Thanks!'
+  }
+  Paybutton.render("xxx", config);
+</script>
+
 </body>
 
 </html>
