--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Collin's PayButton</title>
 
-<script src="/v0.1/js/paybutton.js"></script>
+<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
   
     <!-- icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://paybutton.cash/images/icons/apple-touch-icon.png">
