--- a/test.html
+++ b/test.html
@@ -24,6 +24,16 @@
 </head>
 
 <body>
+  
+<button class="pay-button undefined" button-text="Pay with Bitcoin Cash ($240)" button-text-2="" success-msg="undefined" address="undefined" amount="240" amount-type="USD" paywall-field="undefined" success-callback="processSupporterPayment"></button>
+  
+<script>
+  var config = {
+    style: '',
+button_text: "Pay with Bitcoin Cash ($240)", button_text_2: "", amount: 240, amount_type: "USD", success_callback: "processSupporterPayment"
+  }
+  Paybutton.render("elem1", config);
+</script>
 
 
 <button
