--- a/test.html
+++ b/test.html
@@ -35,7 +35,11 @@ button_text: "Pay with Bitcoin Cash ($240)", button_text_2: "", amount: 240, amo
   Paybutton.render("elem1", config);
 </script>
 
-
+  
+ <script>
+  var config =  {address: "bitcoincash:qzqh7ej3rdrw6r32guzdg0x4a275hqwjkgtmjazc64", button_text: "Pay with Bitcoin Cash ($240)", button_text_2: "", amount: 240, amount_type: "USD", …}
+  Paybutton.render("elem1", config);
+</script>
 <button
 class="pay-button spice"
 button-text="Support The Spice"
