--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
 <body>
   
 <button class="pay-button undefined" button-text="Pay with Bitcoin Cash ($240)" button-text-2="" success-msg="undefined" address="undefined" amount="240" amount-type="USD" paywall-field="undefined" success-callback="processSupporterPayment"></button>
-  
+  <br />
 <script>
   var config = {
     style: '',
@@ -35,11 +35,13 @@ button_text: "Pay with Bitcoin Cash ($240)", button_text_2: "", amount: 240, amo
   Paybutton.render("elem1", config);
 </script>
 
-  
+  <br />
  <script>
-  var config =  {address: "bitcoincash:qzqh7ej3rdrw6r32guzdg0x4a275hqwjkgtmjazc64", button_text: "Pay with Bitcoin Cash ($240)", button_text_2: "", amount: 240, amount_type: "USD", …}
-  Paybutton.render("elem1", config);
+  var config2 =  {address: "bitcoincash:qzqh7ej3rdrw6r32guzdg0x4a275hqwjkgtmjazc64", button_text: "Pay with Bitcoin Cash ($241)", button_text_2: "", amount: 241, amount_type: "USD", …}
+  Paybutton.render("elem1", config2);
 </script>
+  
+  <br /><br />
 <button
 class="pay-button spice"
 button-text="Support The Spice"
