--- a/test.html
+++ b/test.html
@@ -41,6 +41,12 @@ button_text: "Pay with Bitcoin Cash ($240)", button_text_2: "", amount: 240, amo
   Paybutton.render("elem1", config2);
 </script>
   
+  <div class="c_container">
+
+  <div id="elem1"></div>
+
+</div>
+  
   <br /><br />
 <button
 class="pay-button spice"
