--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 </script>
   
 <script>
-  var config2 = {
+  var config = {
     style: 'pay-button rev',
     button_text: 'Send 17 BCH',
     button_text_2: 'Click to Send BCH',
@@ -54,7 +54,7 @@
     address: 'bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k',
     success_msg: 'Thanks!'
   }
-  Paybutton.render("elem1", config2);
+  Paybutton.render("elem1", config);
 </script>
   
   <br /><br />
