--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PayButton - Coming Soon to BCH</title>
 
-<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.js"></script>
-  
+<script src="https://alt-win.github.io/paybutton.github.io//pre-release/v0.1/js/paybutton.js"></script>
+
     <!-- icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
@@ -19,18 +19,18 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="./images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-  
+
 
 </head>
 
 <body>
-  
+
 <div class="c_container">
 
   <div id="elem1"></div>
 
 </div>
-  
+
 <script>
   var config = {
     style: 'pay-button',
@@ -43,7 +43,7 @@
   }
   Paybutton.render("elem1", config);
 </script>
-  
+
 <script>
   var config = {
     style: 'pay-button rev',
@@ -56,7 +56,7 @@
   }
   Paybutton.render("elem1", config);
 </script>
-  
+
   <br /><br />
 <button
 class="pay-button spice"
@@ -159,7 +159,7 @@ success-msg="Thanks for supporting PayButton!"
 >
 </button>
 
- 
+
 </body>
 
 </html>
