redirect to current fork url

--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -7,19 +7,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Collin's PayButton</title>
 
-<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
-  
+<script src="https://alt-win.github.io/paybutton.github.io/pre-release/v0.1/js/paybutton.min.js"></script>
+
     <!-- icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://paybutton.cash/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://paybutton.cash/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://paybutton.cash/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="https://paybutton.cash/images/icons/site.webmanifest">
-    <link rel="mask-icon" href="https://paybutton.cash/images/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="https://paybutton.cash/images/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://alt-win.github.io/paybutton.github.io/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://alt-win.github.io/paybutton.github.io/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://alt-win.github.io/paybutton.github.io/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="https://alt-win.github.io/paybutton.github.io/images/icons/site.webmanifest">
+    <link rel="mask-icon" href="https://alt-win.github.io/paybutton.github.io/images/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="https://alt-win.github.io/paybutton.github.io/images/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="https://paybutton.cash/images/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="https://alt-win.github.io/paybutton.github.io/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-  
+
 <style type="text/css">
 
     .c_container {
