--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
   </head>
 
   <body>
-
-    <div class="overlay"></div>
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="csfiles/mp4/bg.mp4" type="video/mp4">
-    </video>
-
     <div class="masthead">
       <div class="masthead-bg"></div>
       <div class="container h-100">
@@ -48,6 +42,9 @@
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class="mb-3">Spice Button is now in Pre-Release!</h1>
+                <div class="input-twitter">
+                  <button onclick="window.location.href='www.reddit.com/r/btc/comments/an89xt/announcement_paybuttoncash_prerelease_launch_host/'" class="btn btn-secondary" type="button">Create A Spice Button!</button>
+                </div><br />
               </div>
             </div>
           </div>
