--- a/testmin.html
+++ b/testmin.html
@@ -5,17 +5,11 @@
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PayButton - Coming Soon to BCH</title>
+<title>Spice Button - Coming Soon to BCH</title>
 
 <script src="https://github.com/SLPVH/spicebutton/blob/master/pre-release/v0.1/js/paybutton.min.js"></script>
   
     <!-- icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon-16x16.png">
-    <link rel="manifest" href="./images/icons/site.webmanifest">
-    <link rel="mask-icon" href="./images/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="./images/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="./images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
