--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PayButton - Coming Soon to BCH</title>
+<title>Spice Button - Coming Soon to BCH</title>
 
 <script src="https://github.com/SLPVH/spicebutton/blob/master/pre-release/v0.1/js/paybutton.js"></script>
   
