--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
     <!-- icons -->
   </head>
 
-  <body>
+  <body class="homepage">
+    <div id="header">
+      <!-- Nav -->
+      <nav id="nav">
+        <ul>
+          <li style="white-space: nowrap;">
+            <a href="pos.html">Point Of Sale</a>
+          </li>
+          <li style="white-space: nowrap;">
+            <a href="widget.html">Widget</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </body>
 
 </html>
