--- a/index.html
+++ b/index.html
@@ -18,14 +18,21 @@
       <nav id="nav">
         <ul>
           <li style="white-space: nowrap;">
-            <a href="pos.html">Point Of Sale</a>
+            <a href="#pos">Point Of Sale</a>
           </li>
           <li style="white-space: nowrap;">
-            <a href="widget.html">Widget</a>
+            <a href="#widget">Widget</a>
           </li>
         </ul>
       </nav>
     </div>
+    
+    <-- Main -->
+      <div id="pos">
+      </div>
+      
+      <div id="widget">
+      </div>
   </body>
 
 </html>
