--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="DuneSquad">
     <title>Spice Button - Coming Soon to BCH SLP</title>
     <!-- Custom fonts for this template -->
     <!-- Custom styles for this template -->
@@ -27,7 +27,7 @@
       </nav>
     </div>
     
-    <-- Main -->
+    <!-- Main -->
       <div id="pos">
       </div>
       
