--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="DuneSquad">
-    <title>Spice Button - Coming Soon to BCH SLP</title>
-    <!-- Custom fonts for this template -->
-    <!-- Custom styles for this template -->
-    <!-- icons -->
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="DuneSquad">
+  <title>Spice Button - Coming Soon to BCH SLP</title>
+  <!-- Custom fonts for this template -->
+  <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="style.css">
+  <!-- icons -->
+</head>
 
-  <body class="homepage">
-    <div id="header">
-      <!-- Nav -->
-      <nav id="nav">
-        <ul>
-          <li style="white-space: nowrap;">
-            <a href="#pos">Point Of Sale</a>
-          </li>
-          <li style="white-space: nowrap;">
-            <a href="#widget">Widget</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    
+<body class="homepage">
+  <div class="header">
+    <img src="https://spicetoken.org/img/placeholders/media_files/spice_master_trans_bg_black_outer_no_text.svg" alt="">
+    <h1>SpiceButton</h1>
+  </div>
+  <!-- Nav -->
+  <div class="main">
+    <!-- <nav class="nav">
+      <div class="nav-pos">
+        <a href="#pos">Point Of Sale</a>
+      </div>
+
+      <div class="nav-widget">
+        <a href="#widget">Widget</a>
+      </div>
+
+    </nav> -->
+
     <!-- Main -->
-      <div id="pos">
-      </div>
-      
-      <div id="widget">
-      </div>
-  </body>
+    <!-- <div class="pos">
+
+    </div>
+
+    <div class="widget">
+
+    </div>
+  </div> -->
+</body>
 
 </html>
