Added nav + outline

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <!-- Nav -->
   <div class="main">
-    <!-- <nav class="nav">
+    <nav class="nav">
       <div class="nav-pos">
         <a href="#pos">Point Of Sale</a>
       </div>
@@ -29,17 +29,17 @@
         <a href="#widget">Widget</a>
       </div>
 
-    </nav> -->
+    </nav>
 
     <!-- Main -->
-    <!-- <div class="pos">
+    <div class="pos">
 
     </div>
 
     <div class="widget">
 
     </div>
-  </div> -->
+  </div>
 </body>
 
 </html>
