--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
 
     <!-- Main -->
     <div class="pos">
-
+      <div class="">
+        <span>SLP Address:</span>
+        <input type="text" name="" value="">
+      </div>
+      <div class="">
+        <span>Currency Options:</span>
+      </div>
+      <div class="">
+        <button type="submit" name="button">Generate Custom POS Page</button>
+      </div>
     </div>
 
     <div class="widget">
