Added more Content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="DuneSquad">
   <title>Spice Button - Coming Soon to BCH SLP</title>
   <!-- Custom fonts for this template -->
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="style.css">
   <!-- icons -->
@@ -33,14 +34,14 @@
 
     <!-- Main -->
     <div class="pos">
-      <div class="">
+      <div class="slp-address-field">
         <span>SLP Address:</span>
-        <input type="text" name="" value="">
+        <input id="slp-address-input" type="text" name="" value="">
       </div>
       <div class="">
         <span>Currency Options:</span>
       </div>
-      <div class="">
+      <div class="launch-pos">
         <button type="submit" name="button">Generate Custom POS Page</button>
       </div>
     </div>
