--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
       </div>
       <div class="">
         <span>Currency Options:</span>
+          <form class="" action="" method="post">
+            <input type="radio" name="Price in Spice" value="">
+            Price in Spice <br>
+            <input type="radio" name="" value="">
+            <!-- rates will be fetched from coingecko API -->
+            Use fiat currency <br>
+            <input type="text" name="" value="" placeholder="USD">
+            <input type="radio" name="" value="">
+
+          </form>
       </div>
       <div class="launch-pos">
-        <button type="submit" name="button">Generate Custom POS Page</button>
+        <button type="submit" name="button">
+          <img src="https://spicetoken.org/img/placeholders/media_files/spice_master_trans_bg_black_outer_no_text.svg" alt="">
+          Generate POS
+        </button>
       </div>
 
 
@@ -55,7 +68,7 @@
     </div>
   </div>
 
-  
+
 </body>
 
 </html>
