--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
             <input type="radio" name="" value="">
             <!-- rates will be fetched from coingecko API -->
             Use fiat currency <br>
-            <input type="text" name="" value="" placeholder="USD">
-            <input type="radio" name="" value="">
+            <input type="text" name="" value="" placeholder="USD"> <br>
+            <input type="checkbox" name="" value="">
+            Set my own rates: <br>
+            1 <span>Spice</span> = <input type="number" name="" value=""> <span>USD</span>
+
+
 
           </form>
       </div>
