Fixed the <div> problem

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
     <!-- Main -->
 
     <div class="tab-content pos">
-    <h1>Point of Sale</h1>
+      <h1>Point of Sale</h1>
       <div class="slp-address-field">
         <span>SLP Address:</span>
         <input id="slp-address-input" type="text" name="" value="">
       </div>
       <div class="">
         <span>Currency Options:</span>
-          <form class="" action="" method="post">
-            <input type="radio" name="Price in Spice" value="">
-            Price in Spice <br>
-            <input type="radio" name="" value="">
-            <!-- rates will be fetched from coingecko API -->
-            Use fiat currency <br>
-            <input type="text" name="" value="" placeholder="USD"> <br>
-            <input type="checkbox" name="" value="">
-            Set my own rates: <br>
-            1 <span>Spice</span> = <input type="number" name="" value=""> <span>USD</span>
+        <form class="" action="" method="post">
+          <input type="radio" name="Price in Spice" value="">
+          Price in Spice <br>
+          <input type="radio" name="" value="">
+          <!-- rates will be fetched from coingecko API -->
+          Use fiat currency <br>
+          <input type="text" name="" value="" placeholder="USD"> <br>
+          <input type="checkbox" name="" value="">
+          Set my own rates: <br>
+          1 <span>Spice</span> = <input type="number" name="" value=""> <span>USD</span>
 
 
 
-          </form>
+        </form>
       </div>
       <div class="launch-pos">
         <button type="submit" name="button">
@@ -67,11 +67,14 @@
       </div>
 
 
+
+
+
+    </div>
     <div class="tab-content widget hide">
       <h1>Widget</h1>
     </div>
   </div>
-
 
 </body>
 
