--- a/pre-release/test_pages/c_paybutton.html
+++ b/pre-release/test_pages/c_paybutton.html
@@ -5,19 +5,19 @@
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Collin's PayButton</title>
+<title>PayButton</title>
 
-<script src="https://paybutton.cash/pre-release/v0.1/js/paybutton.min.js"></script>
+<script src="../v0.2.0/js/paybutton.min.js"></script>
   
     <!-- icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://paybutton.cash/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://paybutton.cash/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://paybutton.cash/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="https://paybutton.cash/images/icons/site.webmanifest">
-    <link rel="mask-icon" href="https://paybutton.cash/images/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="https://paybutton.cash/images/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://paybutton.org/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://paybutton.org/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://paybutton.org/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="https://paybutton.org/images/icons/site.webmanifest">
+    <link rel="mask-icon" href="https://paybutton.org/images/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="https://paybutton.org/images/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="https://paybutton.cash/images/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="https://paybutton.org/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
   
 <style type="text/css">
@@ -45,21 +45,21 @@
 <div class="c_container">
 <button
 class="pay-button"
-button-text="Tip Collin $1/BCH!"
+button-text="Tip $1/BCH!"
 button-text-2="Click to Send BCH"
 amount="1"
 amount-type="usd"
-address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
+address="bitcoincash:qzqh7ej3rdrw6r32guzdg0x4a275hqwjkgtmjazc64"
 success-msg="Thanks for The Tip!"
 >
 </button>
 <button
 class="pay-button rev"
-button-text="Tip Collin $5/BCH!"
+button-text="Tip $5/BCH!"
 button-text-2="Click to Send BCH"
 amount="5"
 amount-type="usd"
-address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
+address="bitcoincash:qzqh7ej3rdrw6r32guzdg0x4a275hqwjkgtmjazc64"
 success-msg="Thanks for The Tip!"
 >
 </button>
@@ -69,7 +69,7 @@ button-text="Any Amount!"
 button-text-2="Click to Send BCH"
 amount=""
 amount-type=""
-address="bitcoincash:qp24zfhleckncxq8snvtccxtsa05erxvsc0cjy542k"
+address="bitcoincash:qzqh7ej3rdrw6r32guzdg0x4a275hqwjkgtmjazc64"
 success-msg="Thanks for The Tip!"
 >
 </button>
